[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/mononoki-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://tools/dice_roller/DiceRoller.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 96
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 96
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 84
font_data = ExtResource( 1 )

[node name="DiceRoller" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="DiceRollerBanner" type="ColorRect" parent="."]
anchor_bottom = 0.212
margin_left = 40.0
margin_top = 105.0
margin_right = 1040.0
margin_bottom = -298.8
color = Color( 0.368627, 0, 0, 1 )

[node name="LabelDiceRoller" type="Label" parent="DiceRollerBanner"]
anchor_top = 0.0142232
anchor_bottom = 0.0142232
margin_top = -1.49344
margin_right = 1000.0
margin_bottom = 107.507
custom_fonts/font = SubResource( 1 )
text = "DICE ROLLER"
align = 1
valign = 1

[node name="ButtonPlusFive" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -160.0
margin_top = 466.0
margin_right = -40.0
margin_bottom = 581.0
custom_fonts/font = SubResource( 1 )
text = "+5"

[node name="ButtonPlusOne" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 204.25
margin_top = 466.0
margin_right = 324.25
margin_bottom = 581.0
custom_fonts/font = SubResource( 1 )
text = "+1"

[node name="ButtonMinusFive" type="Button" parent="."]
margin_left = 40.0
margin_top = 466.0
margin_right = 160.0
margin_bottom = 581.0
custom_fonts/font = SubResource( 1 )
text = "-5"

[node name="ButtonMinusOne" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -316.0
margin_top = 466.0
margin_right = -196.0
margin_bottom = 581.0
custom_fonts/font = SubResource( 1 )
text = "-1"

[node name="TextRollValue" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -146.0
margin_top = 465.0
margin_right = 154.0
margin_bottom = 584.0
rect_min_size = Vector2( 300, 0 )
custom_constants/minimum_spaces = 5
custom_fonts/font = SubResource( 1 )
align = 1
max_length = 5
placeholder_text = "1"
caret_blink = true
caret_blink_speed = 0.5

[node name="ButtonD4" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 40.0
margin_top = -582.0
margin_right = 153.0
margin_bottom = -467.0
custom_fonts/font = SubResource( 2 )
text = "D4"

[node name="ButtonD6" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -228.0
margin_top = -582.0
margin_right = -108.0
margin_bottom = -467.0
custom_fonts/font = SubResource( 2 )
text = "D6"

[node name="ButtonD8" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 172.0
margin_top = -582.0
margin_right = 292.0
margin_bottom = -467.0
custom_fonts/font = SubResource( 2 )
text = "D8"

[node name="ButtonD10" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.0
margin_top = -582.0
margin_right = 35.0
margin_bottom = -467.0
custom_fonts/font = SubResource( 2 )
text = "D10"

[node name="ButtonD12" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 56.0
margin_top = -582.0
margin_right = 180.0
margin_bottom = -467.0
custom_fonts/font = SubResource( 2 )
text = "D12"

[node name="ButtonD20" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -340.0
margin_top = -582.0
margin_right = -220.0
margin_bottom = -467.0
custom_fonts/font = SubResource( 2 )
text = "D20"

[node name="ButtonD100" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -199.0
margin_top = -582.0
margin_right = -43.0
margin_bottom = -467.0
custom_fonts/font = SubResource( 2 )
text = "D100"

[node name="ButtonCustom" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -2125.0
margin_right = 376.0
margin_bottom = -2005.0
custom_fonts/font = SubResource( 1 )
text = "Custom"

[node name="TextCustomRoll" type="LineEdit" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -690.0
margin_top = -2127.0
margin_right = -41.0
margin_bottom = -2004.0
custom_constants/minimum_spaces = 0
custom_fonts/font = SubResource( 1 )
max_length = 32
placeholder_text = "xdy +- z"
caret_blink = true
caret_blink_speed = 0.5

[node name="ButtonClearCustom" type="Button" parent="TextCustomRoll"]
margin_left = 585.0
margin_top = 28.0
margin_right = 685.0
margin_bottom = 168.0
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "x"

[node name="ButtonAdvantage" type="Button" parent="."]
margin_left = 40.0
margin_top = 760.0
margin_right = 334.0
margin_bottom = 877.0
custom_fonts/font = SubResource( 1 )
text = "Adv."

[node name="ButtonNormal" type="Button" parent="."]
margin_left = 389.0
margin_top = 760.0
margin_right = 692.0
margin_bottom = 877.0
custom_fonts/font = SubResource( 1 )
text = "Norm"

[node name="ButtonDisadvantage" type="Button" parent="."]
margin_left = 748.0
margin_top = 760.0
margin_right = 1039.0
margin_bottom = 877.0
custom_fonts/font = SubResource( 1 )
text = "Dis."

[node name="ButtonRollDice" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -1443.0
margin_right = -41.0
margin_bottom = -1328.0
custom_fonts/font = SubResource( 1 )
text = "Roll Dice"

[node name="RollResultBanner" type="ColorRect" parent="."]
margin_left = 40.0
margin_top = 1154.0
margin_right = 1040.0
margin_bottom = 1718.0
color = Color( 0.270588, 0.270588, 0.270588, 1 )

[node name="LabelResult" type="RichTextLabel" parent="RollResultBanner"]
margin_right = 1000.0
margin_bottom = 562.0
custom_fonts/bold_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][b]
"
text = "
"
__meta__ = {
"_edit_lock_": true
}

[node name="RectCustomEnabled" type="ColorRect" parent="."]
visible = false
margin_left = 40.0
margin_top = 462.0
margin_right = 1040.0
margin_bottom = 735.0
mouse_filter = 2
color = Color( 0.25098, 0.25098, 0.25098, 0.756863 )

[node name="RectCustomDisable" type="ColorRect" parent="."]
margin_left = 40.0
margin_top = 246.0
margin_right = 1040.0
margin_bottom = 420.0
mouse_filter = 2
color = Color( 0.25098, 0.25098, 0.25098, 0.756863 )

[node name="LabelRollInfoMin" type="RichTextLabel" parent="."]
margin_left = 40.0
margin_top = 1810.0
margin_right = 353.0
margin_bottom = 2122.0
mouse_filter = 2
custom_fonts/bold_font = SubResource( 4 )
bbcode_enabled = true

[node name="LabelRollInfoAvg" type="RichTextLabel" parent="."]
margin_left = 384.0
margin_top = 1810.0
margin_right = 697.0
margin_bottom = 2058.0
mouse_filter = 2
custom_fonts/bold_font = SubResource( 4 )
bbcode_enabled = true

[node name="LabelRollInfoMax" type="RichTextLabel" parent="."]
margin_left = 725.0
margin_top = 1810.0
margin_right = 1038.0
margin_bottom = 2124.0
mouse_filter = 2
custom_fonts/bold_font = SubResource( 4 )
bbcode_enabled = true

[connection signal="pressed" from="ButtonPlusFive" to="." method="_on_ButtonPlusFive_pressed"]
[connection signal="pressed" from="ButtonPlusOne" to="." method="_on_ButtonPlusOne_pressed"]
[connection signal="pressed" from="ButtonMinusFive" to="." method="_on_ButtonMinusFive_pressed"]
[connection signal="pressed" from="ButtonMinusOne" to="." method="_on_ButtonMinusOne_pressed"]
[connection signal="focus_entered" from="TextRollValue" to="." method="_on_TextRollValue_focus_entered"]
[connection signal="focus_exited" from="TextRollValue" to="." method="_on_TextRollValue_focus_exited"]
[connection signal="text_entered" from="TextRollValue" to="." method="_on_TextRollValue_text_entered"]
[connection signal="pressed" from="ButtonD4" to="." method="_on_ButtonD4_pressed"]
[connection signal="pressed" from="ButtonD6" to="." method="_on_ButtonD6_pressed"]
[connection signal="pressed" from="ButtonD8" to="." method="_on_ButtonD8_pressed"]
[connection signal="pressed" from="ButtonD10" to="." method="_on_ButtonD10_pressed"]
[connection signal="pressed" from="ButtonD12" to="." method="_on_ButtonD12_pressed"]
[connection signal="pressed" from="ButtonD20" to="." method="_on_ButtonD20_pressed"]
[connection signal="pressed" from="ButtonD100" to="." method="_on_ButtonD100_pressed"]
[connection signal="pressed" from="ButtonCustom" to="." method="_on_ButtonCustom_pressed"]
[connection signal="focus_entered" from="TextCustomRoll" to="." method="_on_TextCustomRoll_focus_entered"]
[connection signal="focus_exited" from="TextCustomRoll" to="." method="_on_TextCustomRoll_focus_exited"]
[connection signal="text_changed" from="TextCustomRoll" to="." method="_on_TextCustomRoll_text_changed"]
[connection signal="pressed" from="TextCustomRoll/ButtonClearCustom" to="." method="_on_ButtonClearCustom_pressed"]
[connection signal="pressed" from="ButtonAdvantage" to="." method="_on_ButtonAdvantage_pressed"]
[connection signal="pressed" from="ButtonNormal" to="." method="_on_ButtonNormal_pressed"]
[connection signal="pressed" from="ButtonDisadvantage" to="." method="_on_ButtonDisadvantage_pressed"]
[connection signal="pressed" from="ButtonRollDice" to="." method="_on_ButtonRollDice_pressed"]
